--- a/manifest.json
+++ b/manifest.json
@@ -2,4 +2,6 @@
     "url": "https://t.me/wolfpack_hustle_bot/wolfpack",
     "name": "Wolf_pack hustle",
     "iconUrl": "https://i.postimg.cc/hvJ2RFFZ/IMG-20250412-220447.jpg",
-  }
+    "termsOfUseUrl": "<terms-of-use-url>",
+    "privacyPolicyUrl": "<privacy-policy-url>"
+}
